# esp-spotify

./: .gitignore  Cargo.toml  sdkconfig.defaults
.github/workflows/: rust_ci.yml
graphics/: Cargo.toml
graphics/src/: lib.rs
graphics_sim/: Cargo.toml
graphics_sim/src/: main.rs
models/: Cargo.toml
models/src/: lib.rs
src/: main.rs
