[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
esp-idf-hal = "=0.43.1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.4.0"
image = "0.25.1"
display-interface = "0.4.1"
ili9341 = "0.5.0"
display-interface-spi = "0.4.1"