[package]
name = "graphics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.4.0"
image = "0.25.1"
embedded-canvas = "0.2.0"
embedded-layout = "0.2.0"
ili9341 = "0.5.0"
display-interface-spi = "0.4.1"
